exports[`borderRadius properly applies unitless value 1`] = `
Object {
  "border-top-left-radius": 5,
  "border-top-right-radius": 5,
}
`;

exports[`borderRadius properly applies unitless zero 1`] = `
Object {
  "border-bottom-left-radius": 0,
  "border-top-left-radius": 0,
}
`;

exports[`borderRadius returns the proper values for the bottom side 1`] = `
Object {
  "border-bottom-left-radius": "5px",
  "border-bottom-right-radius": "5px",
}
`;

exports[`borderRadius returns the proper values for the left side 1`] = `
Object {
  "border-bottom-left-radius": "5px",
  "border-top-left-radius": "5px",
}
`;

exports[`borderRadius returns the proper values for the right side 1`] = `
Object {
  "border-bottom-right-radius": "5px",
  "border-top-right-radius": "5px",
}
`;

exports[`borderRadius returns the proper values for the top side 1`] = `
Object {
  "border-top-left-radius": "5px",
  "border-top-right-radius": "5px",
}
`;
